--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -1,109 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.bible.android.activity"
-      android:installLocation="auto"
-      android:versionName="0.7.2" android:versionCode="47">
-    <application android:icon="@drawable/bible" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AndBibleTheme">
+<?xml version="1.0" encoding="UTF-8"?>
+<manifest android:installLocation="auto" android:versionCode="47"
+    package="net.bible.android.activity" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.7.3">
+    <application android:icon="@drawable/bible"
+        android:label="@string/app_name"
+        android:name="net.bible.android.BibleApplication" android:theme="@style/AndBibleTheme">
         <!-- deprecated but necessary to prevent old shortcut breaking -->
-        <activity android:name=".StartupActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Black">
+        <activity android:label="@string/app_name"
+            android:name=".StartupActivity" android:theme="@android:style/Theme.Black">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="net.bible.android.view.activity.page.MainBibleActivity"
-                  android:label="@string/app_name"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.ChooseDocument"
-                  android:label="@string/chooseBook"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook"
-                  android:label="@string/choosePassageBookName"
-                  android:theme="@android:style/Theme.Black">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageChapter"
-                  android:label="@string/choosePassageChapterName"
-                  android:theme="@android:style/Theme.Black">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageVerse"
-                  android:label="@string/choosePassageVerseName"
-                  android:theme="@android:style/Theme.Black">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.search.Search"
-                  android:label="@string/search"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.search.SearchResults"
-                  android:label="@string/search"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.search.SearchIndex"
-                  android:label="@string/search_index"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.search.SearchIndexProgressStatus"
-                  android:label="@string/search_index"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.references.NotesActivity"
-                  android:label="@string/notes"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.bookmark.Bookmarks"
-                  android:label="@string/bookmarks"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.usernote.UserNotes"
-                  android:label="@string/usernotes"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.bookmark.BookmarkLabels"
-                  android:label="@string/bookmark_labels"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.ChooseDictionaryWord"
-                  android:label="@string/dictionary"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.ChooseGeneralBookKey"
-                  android:label="@string/general_book"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.settings.SettingsActivity"
-                  android:label="@string/settings"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.navigation.History"
-                  android:label="@string/history"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.speak.Speak"
-                  android:label="@string/speak"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.download.Download"
-                  android:label="@string/download"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.download.EnsureBibleDownloaded"
-                  android:label="@string/download">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.download.DownloadStatus"
-                  android:label="@string/progress_status">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.download.ProgressStatus"
-                  android:label="@string/progress_status">
-        </activity>
-        <activity android:name="net.bible.android.view.activity.help.Help"
-                  android:label="@string/help"
-                  android:configChanges="keyboardHidden|orientation">
-        </activity>
-</application>
-<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.INTERNET"/>
-</manifest> 
+        <activity android:label="@string/app_name" android:name="net.bible.android.view.activity.page.MainBibleActivity"/>
+        <activity android:label="@string/chooseBook" android:name="net.bible.android.view.activity.navigation.ChooseDocument"/>
+        <activity android:label="@string/choosePassageBookName"
+            android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook" android:theme="@android:style/Theme.Black"/>
+        <activity android:label="@string/choosePassageChapterName"
+            android:name="net.bible.android.view.activity.navigation.GridChoosePassageChapter" android:theme="@android:style/Theme.Black"/>
+        <activity android:label="@string/choosePassageVerseName"
+            android:name="net.bible.android.view.activity.navigation.GridChoosePassageVerse" android:theme="@android:style/Theme.Black"/>
+        <activity android:label="@string/search" android:name="net.bible.android.view.activity.search.Search"/>
+        <activity android:label="@string/search" android:name="net.bible.android.view.activity.search.SearchResults"/>
+        <activity android:label="@string/search_index" android:name="net.bible.android.view.activity.search.SearchIndex"/>
+        <activity android:label="@string/search_index" android:name="net.bible.android.view.activity.search.SearchIndexProgressStatus"/>
+        <activity android:label="@string/notes" android:name="net.bible.android.view.activity.references.NotesActivity"/>
+        <activity android:label="@string/bookmarks" android:name="net.bible.android.view.activity.bookmark.Bookmarks"/>
+        <activity android:label="@string/usernote_add" android:name="net.bible.android.view.activity.usernote.UserNotesAdd"/>
+        <activity android:label="@string/bookmark_labels" android:name="net.bible.android.view.activity.bookmark.BookmarkLabels"/>
+        <activity android:label="@string/dictionary" android:name="net.bible.android.view.activity.navigation.ChooseDictionaryWord"/>
+        <activity android:label="@string/general_book" android:name="net.bible.android.view.activity.navigation.ChooseGeneralBookKey"/>
+        <activity android:label="@string/settings" android:name="net.bible.android.view.activity.settings.SettingsActivity"/>
+        <activity android:label="@string/history" android:name="net.bible.android.view.activity.navigation.History"/>
+        <activity android:label="@string/speak" android:name="net.bible.android.view.activity.speak.Speak"/>
+        <activity android:label="@string/download" android:name="net.bible.android.view.activity.download.Download"/>
+        <activity android:label="@string/download" android:name="net.bible.android.view.activity.download.EnsureBibleDownloaded"/>
+        <activity android:label="@string/progress_status" android:name="net.bible.android.view.activity.download.DownloadStatus"/>
+        <activity android:label="@string/progress_status" android:name="net.bible.android.view.activity.download.ProgressStatus"/>
+        <activity android:label="@string/help" android:name="net.bible.android.view.activity.help.Help"/>
+    </application>
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+</manifest>
