--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -74,7 +74,15 @@
                   android:label="@string/general_book"
                   android:configChanges="keyboardHidden|orientation">
         </activity>
+        <activity android:name="net.bible.android.view.activity.readingplan.ReadingPlanSelectorList"
+                  android:label="@string/rdg_plan_selector_title"
+                  android:configChanges="keyboardHidden|orientation">
+        </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.DailyReadingList"
+                  android:label="@string/rdg_plan_title"
+                  android:configChanges="keyboardHidden|orientation">
+        </activity>
+        <activity android:name="net.bible.android.view.activity.readingplan.DailyReading"
                   android:label="@string/rdg_plan_title"
                   android:configChanges="keyboardHidden|orientation">
         </activity>
