--- a/AndBibleTest/.classpath
+++ b/AndBibleTest/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AndBible"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="libs/junit-dep-4.9.jar"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
