--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.bible.android.activity"
       android:installLocation="auto"
-      android:versionName="20120202-Xoom" android:versionCode="62">
+      android:versionName="20120203" android:versionCode="62">
     <application android:icon="@drawable/bible" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AndBibleTheme">
         <!-- deprecated but necessary to prevent old shortcut breaking -->
         <activity android:name=".StartupActivity"
@@ -15,7 +15,6 @@
         </activity>
         <activity android:name="net.bible.android.view.activity.page.MainBibleActivity"
                   android:label="@string/app_name"
-                  android:launchMode="singleTask"
                   android:configChanges="keyboardHidden|orientation">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.ChooseDocument"
