Fix single chapter book references in reading plans

--- a/AndBible/assets/readingplan/y1ot1nt1_OTandNT.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_OTandNT.properties
@@ -275,10 +275,10 @@
 275=Isa 24-26, Eph 4
 276=Isa 27-28, Eph 5
 277=Isa 29-30, Eph 6
-278=Isa 31-33, Phil 1
-279=Isa 34-36, Phil 2
-280=Isa 37-38, Phil 3
-281=Isa 39-40, Phil 4
+278=Isa 31-33, Phili 1
+279=Isa 34-36, Phili 2
+280=Isa 37-38, Phili 3
+281=Isa 39-40, Phili 4
 282=Isa 41-42, Col 1
 283=Isa 43-44, Col 2
 284=Isa 45-47, Col 3
@@ -304,7 +304,7 @@
 304=Jer 29-30, Tit 1
 305=Jer 31-32, Tit 2
 306=Jer 33-35, Tit 3
-307=Jer 36-37, Phm 1
+307=Jer 36-37, Phile
 308=Jer 38-39, Heb 1
 309=Jer 40-42, Heb 2
 310=Jer 43-45, Heb 3
@@ -338,9 +338,9 @@
 338=Dan 3-4, 1 Joh 3
 339=Dan 5-6, 1 Joh 4
 340=Dan 7-8, 1 Joh 5
-341=Dan 9-10, 2 Joh 1
-342=Dan 11-12, 3 Joh 1
-343=Hos 1-4, Jude 1
+341=Dan 9-10, 2 Joh
+342=Dan 11-12, 3 Joh
+343=Hos 1-4, Jude
 344=Hos 5-8, Rev 1
 345=Hos 9-11, Rev 2
 346=Hos 12-14, Rev 3
@@ -348,7 +348,7 @@
 348=Amo 1-3, Rev 5
 349=Amo 4-6, Rev 6
 350=Amo 7-9, Rev 7
-351=Obad 1, Rev 8
+351=Obd, Rev 8
 352=Jon 1-4, Rev 9
 353=Mic 1-3, Rev 10
 354=Mic 4-5, Rev 11
