--- a/AndBible/assets/readingplan/y1ot1nt1_OTthenNT.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_OTthenNT.properties
@@ -78,63 +78,63 @@
 78=Judg 17-19
 79=Judg 20-21
 80=Rut 1-4
-81=1st Samuel 1-3
-82=1st Samuel 4-7
-83=1st Samuel 8-12
-84=1st Samuel 13-14
-85=1st Samuel 15-16
-86=1st Samuel 17-18
-87=1st Samuel 19-21
-88=1st Samuel 22-24
-89=1st Samuel 25-27
-90=1st Samuel 28-31
-91=2nd Samuel 1-3
-92=2nd Samuel 4-7
-93=2nd Samuel 8-11
-94=2nd Samuel 12-13
-95=2nd Samuel 14-16
-96=2nd Samuel 17-19
-97=2nd Samuel 20-22
-98=2nd Samuel 23-24
-99=1st Kings 1-2
-100=1st Kings 3-5
-101=1st Kings 6-7
-102=1st Kings 8-9
-103=1st Kings 10-12
-104=1st Kings 13-15
-105=1st Kings 16-18
-106=1st Kings 19-20
-107=1st Kings 21-22
-108=2nd Kings 1-3
-109=2nd Kings 4-5
-110=2nd Kings 6-8
-111=2nd Kings 9-10
-112=2nd Kings 11-13
-113=2nd Kings 14-16
-114=2nd Kings 17-18
-115=2nd Kings 19-21
-116=2nd Kings 22-23
-117=2nd Kings 24-25
-118=1st Chronicles 1-2
-119=1st Chronicles 3-4
-120=1st Chronicles 5-6
-121=1st Chronicles 7-9
-122=1st Chronicles 10-12
-123=1st Chronicles 13-16
-124=1st Chronicles 17-19
-125=1st Chronicles 20-23
-126=1st Chronicles 24-26
-127=1st Chronicles 27-29
-128=2nd Chronicles 1-4
-129=2nd Chronicles 5-7
-130=2nd Chronicles 8-11
-131=2nd Chronicles 12-16
-132=2nd Chronicles 17-20
-133=2nd Chronicles 21-24
-134=2nd Chronicles 25-28
-135=2nd Chronicles 29-31
-136=2nd Chronicles 32-34
-137=2nd Chronicles 35-36
+81=1 Sa 1-3
+82=1 Sa 4-7
+83=1 Sa 8-12
+84=1 Sa 13-14
+85=1 Sa 15-16
+86=1 Sa 17-18
+87=1 Sa 19-21
+88=1 Sa 22-24
+89=1 Sa 25-27
+90=1 Sa 28-31
+91=2 Sa 1-3
+92=2 Sa 4-7
+93=2 Sa 8-11
+94=2 Sa 12-13
+95=2 Sa 14-16
+96=2 Sa 17-19
+97=2 Sa 20-22
+98=2 Sa 23-24
+99=1 Ki 1-2
+100=1 Ki 3-5
+101=1 Ki 6-7
+102=1 Ki 8-9
+103=1 Ki 10-12
+104=1 Ki 13-15
+105=1 Ki 16-18
+106=1 Ki 19-20
+107=1 Ki 21-22
+108=2 Ki 1-3
+109=2 Ki 4-5
+110=2 Ki 6-8
+111=2 Ki 9-10
+112=2 Ki 11-13
+113=2 Ki 14-16
+114=2 Ki 17-18
+115=2 Ki 19-21
+116=2 Ki 22-23
+117=2 Ki 24-25
+118=1 Ch 1-2
+119=1 Ch 3-4
+120=1 Ch 5-6
+121=1 Ch 7-9
+122=1 Ch 10-12
+123=1 Ch 13-16
+124=1 Ch 17-19
+125=1 Ch 20-23
+126=1 Ch 24-26
+127=1 Ch 27-29
+128=2 Ch 1-4
+129=2 Ch 5-7
+130=2 Ch 8-11
+131=2 Ch 12-16
+132=2 Ch 17-20
+133=2 Ch 21-24
+134=2 Ch 25-28
+135=2 Ch 29-31
+136=2 Ch 32-34
+137=2 Ch 35-36
 138=Ezr 1-4
 139=Ezr 5-7
 140=Ezr 8-10
@@ -260,7 +260,7 @@
 260=Joe 1-3
 261=Amo 1-4
 262=Amo 5-9
-263=Obd 1
+263=Obd
 264=Jon 1-4
 265=Mic 1-4
 266=Mic 5-7
@@ -330,33 +330,33 @@
 330=Rom 8-10
 331=Rom 11-14
 332=Rom 15-16
-333=1st Corinthians 1-4
-334=1st Corinthians 5-9
-335=1st Corinthians 10-13
-336=1st Corinthians 14-16
-337=2nd Corinthians 1-4
-338=2nd Corinthians 5-9
-339=2nd Corinthians 10-13
+333=1 Cor 1-4
+334=1 Cor 5-9
+335=1 Cor 10-13
+336=1 Cor 14-16
+337=2 Cor 1-4
+338=2 Cor 5-9
+339=2 Cor 10-13
 340=Gal 1-3
 341=Gal 4-6
 342=Eph 1-3
 343=Eph 4-6
 344=Phili 1-4
 345=Col 1-4
-346=1st Thessalonians 1-5
-347=2nd Thessalonians 1-3
-348=1st Timothy 1-6
-349=2nd Timothy 1-4
-350=Phile 1, Tit 1-3
+346=1 Thess 1-5
+347=2 Thess 1-3
+348=1 Tim 1-6
+349=2 Tim 1-4
+350=Phile, Tit 1-3
 351=Heb 1-4
 352=Heb 5-8
 353=Heb 9-10
 354=Heb 11-13
 355=Jam 1-5
-356=2nd Peter 1-3, 1st Peter 1-5
-357=1st Joh 1-5
-358=2nd Joh 1, 3rd Joh 1
-359=Jude 1, Rev 1-3
+356=2 Peter 1-3, 1 Peter 1-5
+357=1 Joh 1-5
+358=2 Joh, 3 Joh
+359=Jude, Rev 1-3
 360=Rev 4-7
 361=Rev 8-11
 362=Rev 12-14
