--- a/AndBible/assets/readingplan/y1ot1nt1_chronological.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_chronological.properties
@@ -179,7 +179,7 @@
 179=1Ki 20-21 
 180=2Ch 18, 1Ki 22 
 181=2Ch 19-23 
-182=Obd 1, Psa 82-83 
+182=Obd, Psa 82-83 
 183=2Ki 1-4 
 184=2Ki 5-8 
 185=2Ki 9-11 
@@ -346,7 +346,7 @@
 346=Act 20:4-23:35 
 347=Act 24-26 
 348=Act 27-28 
-349=Phile 1, Col 1-4 
+349=Phile, Col 1-4 
 350=Eph 1-6 
 351=Phili 1-4 
 352=1Ti 1-6 
@@ -356,9 +356,9 @@
 356=Heb 7-10 
 357=Heb 11-13 
 358=2Ti 1-4 
-359=Jude 1, 2Pe 1-3 
+359=Jude, 2Pe 1-3 
 360=1 Joh 1-5 
-361=2 Joh 1, 3 Joh 1 
+361=2 Joh, 3 Joh 
 362=Rev 1-5 
 363=Rev 6-11 
 364=Rev 12-18 
