--- a/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
+++ b/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
@@ -112,7 +112,7 @@
 112=Lev 26, Psa 33, Ecc 9, Tit 1 
 113=Lev 27, Psa 34, Ecc 10, Tit 2 
 114=Num 1, Psa 35, Ecc 11, Tit 3 
-115=Num 2, Psa 36, Ecc 12, Phile 1 
+115=Num 2, Psa 36, Ecc 12, Phile 
 116=Num 3, Psa 37, Song 1, Heb 1 
 117=Num 4, Psa 38, Song 2, Heb 2 
 118=Num 5, Psa 39, Song 3, Heb 3 
@@ -146,7 +146,7 @@
 146=Num 35, Psa 79, Isa 27, 1 Joh 5 
 147=Num 36, Psa 80, Isa 28, 2 Joh 1 
 148=Deu 1, Psa 81-82, Isa 29, 3 Joh 1 
-149=Deu 2, Psa 83-84, Isa 30, Jude 1 
+149=Deu 2, Psa 83-84, Isa 30, Jude 
 150=Deu 3, Psa 85, Isa 31, Rev 1 
 151=Deu 4, Psa 86-87, Isa 32, Rev 2 
 152=Deu 5, Psa 88, Isa 33, Rev 3 
@@ -322,7 +322,7 @@
 322=1Ch 11-12, Heb 13, Amo 7, Luk 2 
 323=1Ch 13-14, Jam 1, Amo 8, Luk 3 
 324=1Ch 15, Jam 2, Amo 9, Luk 4 
-325=1Ch 16, Jam 3, Obd 1, Luk 5 
+325=1Ch 16, Jam 3, Obd, Luk 5 
 326=1Ch 17, Jam 4, Jon 1, Luk 6 
 327=1Ch 18, Jam 5, Jon 2, Luk 7 
 328=1Ch 19-20, 1Pe 1, Jon 3, Luk 8 
