fix single chapter book problem in MCheyne daily reading

--- a/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
+++ b/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
@@ -144,8 +144,8 @@
 144=Num 33, Psa 78:1-39, Isa 25, 1 Joh 3 
 145=Num 34, Psa 78:40-72, Isa 26, 1 Joh 4 
 146=Num 35, Psa 79, Isa 27, 1 Joh 5 
-147=Num 36, Psa 80, Isa 28, 2 Joh 1 
-148=Deu 1, Psa 81-82, Isa 29, 3 Joh 1 
+147=Num 36, Psa 80, Isa 28, 2 Joh 
+148=Deu 1, Psa 81-82, Isa 29, 3 Joh 
 149=Deu 2, Psa 83-84, Isa 30, Jude 
 150=Deu 3, Psa 85, Isa 31, Rev 1 
 151=Deu 4, Psa 86-87, Isa 32, Rev 2 
@@ -333,14 +333,14 @@
 333=1Ch 26-27, 2Pe 1, Mic 4, Luk 13 
 334=1Ch 28, 2Pe 2, Mic 5, Luk 14 
 335=1Ch 29, 2Pe 3, Mic 6, Luk 15 
-336=2Ch 1, 1 Joh 1, Mic 7, Luk 16 
-337=2Ch 2, 1 Joh 2, Nah 1, Luk 17 
-338=2Ch 3-4, 1 Joh 3, Nah 2, Luk 18 
-339=2Ch 5:1-6:11, 1 Joh 4, Nah 3, Luk 19 
-340=2Ch 6:12-42, 1 Joh 5, Hab 1, Luk 20 
-341=2Ch 7, 2 Joh 1, Hab 2, Luk 21 
-342=2Ch 8, 3 Joh 1, Hab 3, Luk 22 
-343=2Ch 9, Jude 1, Zep 1, Luk 23 
+336=2Ch 1, 1Joh 1, Mic 7, Luk 16 
+337=2Ch 2, 1Joh 2, Nah 1, Luk 17 
+338=2Ch 3-4, 1Joh 3, Nah 2, Luk 18 
+339=2Ch 5:1-6:11, 1Joh 4, Nah 3, Luk 19 
+340=2Ch 6:12-42, 1Joh 5, Hab 1, Luk 20 
+341=2Ch 7, 2Joh, Hab 2, Luk 21 
+342=2Ch 8, 3Joh, Hab 3, Luk 22 
+343=2Ch 9, Jude, Zep 1, Luk 23 
 344=2Ch 10, Rev 1, Zep 2, Luk 24 
 345=2Ch 11-12, Rev 2, Zep 3, Joh 1 
 346=2Ch 13, Rev 3, Hag 1, Joh 2 
