--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -15,113 +15,119 @@
         </activity>
         <activity android:name="net.bible.android.view.activity.page.MainBibleActivity"
                   android:label="@string/app_name"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.ChooseDocument"
                   android:label="@string/chooseBook"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook"
                   android:label="@string/choosePassageBookName"
+                  android:configChanges="locale"
                   android:theme="@android:style/Theme.Black">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageChapter"
                   android:label="@string/choosePassageChapterName"
+                  android:configChanges="locale"
                   android:theme="@android:style/Theme.Black">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageVerse"
                   android:label="@string/choosePassageVerseName"
+                  android:configChanges="locale"
                   android:theme="@android:style/Theme.Black">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.Search"
                   android:label="@string/search"
-                  android:configChanges="keyboardHidden|orientation"
+                  android:configChanges="keyboardHidden|orientation|locale"
                   android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.SearchResults"
                   android:label="@string/search"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.SearchIndex"
                   android:label="@string/search_index"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.SearchIndexProgressStatus"
                   android:label="@string/search_index"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.footnoteandref.FootnoteAndRefActivity"
                   android:label="@string/notes"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.bookmark.Bookmarks"
                   android:label="@string/bookmarks"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.bookmark.BookmarkLabels"
                   android:label="@string/bookmark_labels"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.comparetranslations.CompareTranslations"
                   android:label="@string/compare_translations"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.mynote.MyNotes"
                   android:label="@string/mynotes"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.ChooseDictionaryWord"
                   android:label="@string/dictionary"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.genbookmap.ChooseGeneralBookKey"
                   android:label="@string/general_book"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.genbookmap.ChooseMapKey"
                   android:label="@string/doc_type_map"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.ReadingPlanSelectorList"
                   android:label="@string/rdg_plan_selector_title"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.DailyReadingList"
                   android:label="@string/rdg_plan_title"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.DailyReading"
                   android:label="@string/rdg_plan_title"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.settings.SettingsActivity"
                   android:label="@string/settings"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.History"
                   android:label="@string/history"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.speak.Speak"
                   android:label="@string/speak"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.Download"
                   android:label="@string/download"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.EnsureBibleDownloaded"
+                  android:configChanges="keyboardHidden|orientation|locale"
                   android:label="@string/download">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.DownloadStatus"
+                  android:configChanges="keyboardHidden|orientation|locale"
                   android:label="@string/progress_status">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.ProgressStatus"
+                  android:configChanges="keyboardHidden|orientation|locale"
                   android:label="@string/progress_status">
         </activity>
         <activity android:name="net.bible.android.view.activity.help.Help"
                   android:label="@string/help"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:configChanges="keyboardHidden|orientation|locale">
         </activity>
 </application>
 <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
