correct Phile 1 reference in Mcheyne

--- a/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
+++ b/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
@@ -306,7 +306,7 @@
 306=2Ki 15, Tit 1, Hos 8, Psa 123-125 
 307=2Ki 16, Tit 2, Hos 9, Psa 126-128 
 308=2Ki 17, Tit 3, Hos 10, Psa 129-131 
-309=2Ki 18, Phile 1, Hos 11, Psa 132-134 
+309=2Ki 18, Phile, Hos 11, Psa 132-134 
 310=2Ki 19, Heb 1, Hos 12, Psa 135-136 
 311=2Ki 20, Heb 2, Hos 13, Psa 137-138 
 312=2Ki 21, Heb 3, Hos 14, Psa 139 
