--- a/AndBible/.tx/config
+++ b/AndBible/.tx/config
@@ -4,4 +4,5 @@ host = https://www.transifex.com
 [andbible.and-bible-stringsxml]
 file_filter = res\values-<lang>\strings.xml
 source_lang = en
+source_file = res\values\strings.xml
 
