--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -133,6 +133,7 @@
 <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
 
 <!-- allow use on Google TV -->
 <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
