--- a/jsword-tweaks/build.xml
+++ b/jsword-tweaks/build.xml
@@ -1,6 +1,6 @@
 <project name="buildJswordTweakedJar" default="copyJarsToAndBible" basedir=".">
 	
-	<property name="jsword.project" location="../../jsword/jsword"/>
+	<property name="jsword.project" location="../../jsword-svn/jsword"/>
 	<property name="jsword.src" location="${jsword.project}/src/main/java"/>
 	<property name="jsword.resources" location="${jsword.project}/src/main/resources"/>
 	<property name="tweaks.jsword.src" location="src/main/java/jsword"/>
@@ -46,7 +46,7 @@
 	</target>
 
 	<target name="compile" depends="mergeCode">
-		<javac srcdir="${build.src}" destdir="${build.class}" classpathref="classpath" debug="true"/>
+		<javac srcdir="${build.src}" destdir="${build.class}" classpathref="classpath" debug="true" source="1.6" target="1.6"/>
 	</target>
 
 	<target name="jar" depends="compile">
