--- a/jsword-tweaks/.classpath
+++ b/jsword-tweaks/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="src/util/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jsword-svn"/>
 	<classpathentry kind="lib" path="jar/commons-lang-2.5.jar"/>
 	<classpathentry kind="lib" path="jar/javatar-2.5.jar"/>
 	<classpathentry kind="lib" path="jar/jdom111Fixed.jar"/>
@@ -15,5 +14,6 @@
 	<classpathentry kind="lib" path="jar/lucene-smartcn-3.0.2.jar"/>
 	<classpathentry kind="lib" path="jar/lucene-snowball-3.0.2.jar"/>
 	<classpathentry kind="lib" path="jar/mmseg4j-all-1.8.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jsword"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
