--- a/jsword-tweaks/build.xml
+++ b/jsword-tweaks/build.xml
@@ -13,6 +13,7 @@
 
 	<path id="classpath">
 		<fileset dir="${jsword.project}/lib/jars" includes="*.jar"/>
+		<fileset dir="./libs" includes="*.jar"/>
 	</path>
 	
 	<target name="clean">
@@ -39,7 +40,7 @@
 		<copy file="${jsword.resources}/BibleNames_zh_CN.properties" tofile="${build.src}/BibleNames_zh.properties" overwrite="true"/>
 
 		<copy todir="${build.src}" overwrite="true">
-			<!-- No Tweaks if poss fileset dir="${tweaks.jsword.src}"/ -->
+			<fileset dir="${tweaks.jsword.src}"/>
 			<fileset dir="${tweaks.jsword.resources}"/>
 		</copy>
 
