--- a/AndBibleTest/.classpath
+++ b/AndBibleTest/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="libs/robolectric-2.1-20130517.204520-6-jar-with-dependencies.jar" sourcepath="libs/robolectric-2.1-20130517.204520-6-sources.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AndBible"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="libs/junit-dep-4.9.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="output" path="bin/classes"/>
+	<classpathentry kind="lib" path="C:/Development/tools/android-sdk/platforms/android-8/android.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
