Add missing verse to KJVToLeningrad mapping

--- a/AndBible/assets/versificationmaps/KJVToLeningrad.properties
+++ b/AndBible/assets/versificationmaps/KJVToLeningrad.properties
@@ -2078,6 +2078,7 @@ Hos.14.8=Hos.14.9
 Hos.14.9=Hos.14.10
 Joel.2.28=Joel.3.1
 Joel.2.29=Joel.3.2
+Joel.2.30=Joel.3.3
 Joel.2.31=Joel.3.4
 Joel.2.32=Joel.3.5
 Joel.3.1=Joel.4.1
