comment out colophons

--- a/AndBible/assets/versificationmaps/KJVToSynodal.properties
+++ b/AndBible/assets/versificationmaps/KJVToSynodal.properties
@@ -2822,20 +2822,21 @@ Hos.14.9=Hos.14.10
 Rom.16.25=Rom.14.24
 Rom.16.26=Rom.14.25
 Rom.16.27=Rom.14.26
-Rom.16.27b=colophon
-1Cor.16.24b=colophon
+# colophons are not yet handled by And Bible
+#Rom.16.27b=colophon
+#1Cor.16.24b=colophon
 2Cor.11.33=2Cor.11.32
 2Cor.13.13=2Cor.13.12
 2Cor.13.14=2Cor.13.13
-2Cor.13.14b=colophon
-Gal.6.18b=colophon
-Eph.6.24b=colophon
-Phil.4.23b=colophon
-Col.4.18b=colophon
-1Thess.5.28b=colophon
-2Thess.3.18b=colophon
-1Tim.6.21b=colophon
-2Tim.4.22b=colophon
-Titus.3.15b=colophon
-Phlm.25b=colophon
-Heb.13.25b=colophon
+#2Cor.13.14b=colophon
+#Gal.6.18b=colophon
+#Eph.6.24b=colophon
+#Phil.4.23b=colophon
+#Col.4.18b=colophon
+#1Thess.5.28b=colophon
+#2Thess.3.18b=colophon
+#1Tim.6.21b=colophon
+#2Tim.4.22b=colophon
+#Titus.3.15b=colophon
+#Phlm.25b=colophon
+#Heb.13.25b=colophon
