small fix to KJVToGerman.properties (updated previous beta build)

--- a/AndBible/assets/versificationmaps/KJVToGerman.properties
+++ b/AndBible/assets/versificationmaps/KJVToGerman.properties
@@ -1974,8 +1974,10 @@ Mal.4.4=Mal.3.22
 Mal.4.5=Mal.3.23
 Mal.4.6=Mal.3.24
 Mark.16.20=Mark.16.21
-Acts.19.41=Acts.19.40   () german vers split by [.!]
-2Co.13.13=2Co.13.12     () german vers split by [.!]
+# () german vers split by [.!]
+Acts.19.41=Acts.19.40
+# () german vers split by [.!]
+2Co.13.13=2Co.13.12
 2Co.13.14=2Co.13.13
 3Jn.1.14=3Jn.1.15
 Rev.12.17=Rev.12.18
