AppCompat toolbar - initial integration

--- a/AndBible/project.properties
+++ b/AndBible/project.properties
@@ -11,4 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard.cfg
 
 # Project target.
-target=android-8
+target=android-19
+android.library.reference.1=../../android-support-v7-appcompat
