--- a/AndBibleTest/.project
+++ b/AndBibleTest/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>test</name>
 			<type>2</type>
-			<location>C:/Development/and-bible/AndBible/test</location>
+			<location>/home/martin/C::/Development/and-bible/AndBible/test</location>
 		</link>
 	</linkedResources>
 </projectDescription>
